<resources>

    <string name="app_name">Xperia/AOSP NavBar Buttons</string>
    <string name="navbar_preview">NavBar Preview</string>
    <string name="available_themes">Available themes</string>
    <string name="selected_theme">Selected theme</string>
    <string name="available_colors">Available colors</string>
	<string name="confirm">Confirm</string>
	<string name="import_button_iamges">Import button images</string>
	
	<string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more</string>

    <string name="title_show_recent">Show Recent</string>
    <string name="summ_show_recent">Show recent apps button</string>

    <string name="title_show_menu">Show Menu</string>
    <string name="summ_show_menu">Show menu button</string>

    <string name="title_show_search">Show Search</string>
    <string name="summ_show_search">Show search button</string>

    <string name="title_reorder">Re-order buttons</string>
    <string name="summ_reorder">Re-order buttons in NavBar</string>

    <string name="title_theme">Select theme</string>
    <string name="summ_theme">Select theme for NavBar buttons</string>

    <string name="title_use_alt_menu">Use alternate menu button</string>
    <string name="summ_use_alt_menu">Only available when theme is selected</string>

    <string name="title_restart_systemui">Restart SystemUI (Root required)</string>
    <string name="summ_restart_systemui">Restart SysmteUI process to apply changes immediately.\n\nIf notification bar or NavBar are not displaying correctly or any icons are missing, please reboot your device.</string>

    <string name="title_hints">Hints</string>
    <string name="summ_hints">How to use user define button images</string>
    
    <string name="title_left_margin">Left/Top margin</string>
    <string name="summ_left_margin">Left/Top margin in pixels</string>
    
    <string name="title_right_margin">Right/bottom margin</string>
    <string name="summ_right_margin">Right/bottom margin in pixels</string>
    
    <string name="title_navbar_height">NavBar height (Reboot required)</string>
    <string name="summ_navbar_height">NavBar height factor (50%-150%)</string>
    
    <string name="title_navbar_height_land">NavBar height (Reboot required)</string>
    <string name="summ_navbar_height_land">NavBar height factor (50%-150%) (Tablet)</string>
    
    <string name="title_navbar_width">NavBar width (Reboot required)</string>
    <string name="summ_navbar_width">NavBar width factor (50%-150%) (Landscape)</string>
    
    <string name="title_search_function">Search button action (Reboot required)</string>
    <string name="summ_search_function">Selected action for search button: %s</string>
    <string name="summ_search_function2" formatted="false">Selected action for search button: %s (%s)</string>
    <string name="summ_search_function3" formatted="false">Selected action for search button: %s (%s:%s)</string>
    
    <string name="title_search_longpress_function">Search button long press action (Reboot required)</string>

    <string name="cat_buttons">Buttons</string>
    <string name="cat_layout">NavBar Layout</string>
    <string name="cat_others">Others</string>
    
    <string name="custom_button_images_found">%d custom button images found</string>
    
	<string name="text_none">None</string>
    <string name="text_calculator">Calculator</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_call">Call</string>
    <string name="text_camera">Camera</string>
    <string name="text_contacts">Contacts</string>
    <string name="text_search">Search</string>
    <string name="text_switch_lastapp">Switch to last app</string>
    <string name="text_screenshot">Take screenshot</string>
    <string name="text_screen_off">Screen off</string>
    <string name="text_power_menu">Power menu</string>
    <string name="text_notification_panel">Notification Panel</string>
    <string name="text_quick_settings_panel">Quick Settings Panel</string>
    <string name="text_launch_app">Launch app</string>
    <string name="text_kill_app">Kill foreground app</string>
    <string name="text_launch_shortcut">Launch shortcut</string>
    <string name="text_unknown">Unknown</string>
    
    <string name="msg_unknown_app">Unknown app</string>
    <string name="msg_unknown_shortcut">Unknown shortcut</string>

    <string name="title_show_separator">Show Separator</string>
    <string name="summ_show_separator">Show Separator (transparent placeholder)</string>
    <string name="title_separator_width">Separator width</string>
    <string name="summ_separator_width">Separator width (0%-90%)</string>
    
</resources>