<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_recent"
        android:summary="@string/summ_show_recent"
        android:title="@string/title_show_recent" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_menu"
        android:summary="@string/summ_show_menu"
        android:title="@string/title_show_menu" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_search"
        android:summary="@string/summ_show_search"
        android:title="@string/title_show_search" />

    <Preference
        android:key="pref_reorder"
        android:summary="@string/summ_reorder"
        android:title="@string/title_reorder" />
    <Preference
        android:key="pref_theme"
        android:summary="@string/summ_theme"
        android:title="@string/title_theme" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_use_alt_menu"
        android:summary="@string/summ_use_alt_menu"
        android:title="@string/title_use_alt_menu" />

    <Preference
        android:key="pref_restart_systemui"
        android:summary="@string/summ_restart_systemui"
        android:title="@string/title_restart_systemui" />

    <Preference
        android:key="pref_hints"
        android:summary="@string/summ_hints"
        android:title="@string/title_hints" />

</PreferenceScreen>